# c-playground

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  STYLE.md  Taskfile.yaml
bean/: CMakeLists.txt  README.md  commands.c  commands.h  ledger.c  ledger.h  main.c  parser.c  parser.h  scanner.c  scanner.h  test.sh
bean/data/: basic.bean  medium.bean  simple.bean
bean/test/: balance-balance.expected.txt  balance.bean  check-parse-error.expected.txt  check-scanner-error.expected.txt  check-validation-error.expected.txt  minimal.bean  parse-error.bean  scanner-error.bean  test-ledger.expected.txt  test-parser-valid.expected.txt  test-scanner-valid.expected.txt  valid.bean  validation-error.bean
dodge/: CMakeLists.txt  foo.c  foo.h  main.c
libs/base/: CMakeLists.txt  arena.c  arena.h  pool.c  pool.h  strings.c  strings.h  test_arena.c  test_pool.c  test_strings.c
libs/math_lib/: CMakeLists.txt  math_utils.c  math_utils.h  test_foo.c  test_math_utils.c
scratch/: CMakeLists.txt  bean.c  main.c  stats.c  stb_demo.c
scratch/data/: stats.txt
snake/: CMakeLists.txt  foo.c  foo.h  main.c
